# dream

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yaml  fly.toml  pyproject.toml  requirements.txt  run_app.py  server.sh  start.sh  tailwind.config.js  task  task.md  tasks.py  worker.sh
.chalice/: config.json
.chalice/deployed/: dev.json
.github/workflows/: deploy.yaml  test.yaml
api/: __init__.py  user.py  util.py
app/: __init__.py  types.py
app/api/: __init__.py  auth.py  user.py  util.py  utils.py
app/celery/: __init__.py
app/cli/: __init__.py
app/database/: __init__.py  flask_celery.py
app/mail/: __init__.py
app/migrations/: 1711154177_init.py
app/models/: token.py  user.py
app/schemas/: __init__.py  token.py  user.py
app/session/: __init__.py
app/static/: style.css
app/tasks/: __init__.py  audit.py  email.py
app/templates/: layout.html  magic.html  signin.html  user.html  users.html
app/utils/: __init__.py
chalicelib/api/: __init__.py  auth.py  user.py  util.py
chalicelib/models/: user.py
chalicelib/schemas/: auth.py  user.py
chalicelib/templates/: __init__.py  home.html  layout.html  signin.html
database/: __init__.py
infrastructure/: .terraform.lock.hcl  chalice.tf.json  infra.tf  terraform.tfstate  terraform.tfstate.backup
migrations/: env.py
migrations/versions/: 5b8393b97e95_add_user_table.py  71d34dad90ba_add_user_table.py  db4caa22922b_add_user_table.py
models/: user.py
schemas/: user.py
tests/: conftest.py  test_app.py  transaction_manager.py
tests/api/: test_auth.py  test_user.py  test_util.py
