[tool.poetry]
name = "dream"
version = "0.1.0"
description = ""
authors = ["Craig Mulligan <git@hobochild.com>"]

[tool.poetry.dependencies]
python = "^3.8"
itsdangerous = "^2.0.1"
gunicorn = "^20.1.0"
celery = "^5.2.7"
SQLAlchemy = "^1.4.42"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest-flask = "^1.2.0"
watchdog = { extras = ["watchmedo"], version = "^2.1.6" }
mypy = "^0.920"
black = "^22.3.0"
pytest-cov = "^3.0.0"
freezegun = "^1.1.0"
types-freezegun = "^1.1.4"
pytest = "^6.2.5"
pytest-testmon = "^1.2.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "venv"

[[tool.mypy.overrides]]
module = "celery,freezegun"
ignore_missing_imports = true
