[tool.poetry]
name = "dream"
version = "0.1.0"
description = ""
authors = ["Craig Mulligan <hey@hobochild.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.2"
itsdangerous = "^2.0.1"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^3.1.0"
Flask-Script = "^2.0.6"
requests = "^2.27.1"
SQLAlchemy-Utils = "^0.38.2"
gunicorn = "^20.1.0"
flask-alembic = "^3.0.1"
celery = "^5.2.7"
kombu = {git = "https://github.com/craigmulligan/kombu.git"}
pyright = "^1.1.355"

[tool.poetry.dev-dependencies]
pytest-flask = "^1.2.0"
watchdog = { extras = ["watchmedo"], version = "^2.1.6" }
mypy = "^0.920"
black = "^21.12b0"
pytest-cov = "^3.0.0"
freezegun = "^1.1.0"
types-freezegun = "^1.1.4"
pytest = "^6.2.5"
pytest-testmon = "^1.2.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "venv"
