[tool.poetry]
name = "dream"
version = "0.1.0"
description = ""
authors = ["Craig Mulligan <hey@hobochild.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.2"
itsdangerous = "^2.0.1"
python-dotenv = "^0.19.2"
Flask-SQLAlchemy = "^3.1.0"
Flask-Script = "^2.0.6"
requests = "^2.27.1"
SQLAlchemy-Utils = "^0.38.2"
gunicorn = "^20.1.0"
flask-alembic = "^3.0.1"
celery = "^5.2.7"
pyright = "^1.1.355"
kombu = "^5.3.5"

[tool.poetry.group.dev.dependencies]
pytest-flask = "^1.2.0"
watchdog = { extras = ["watchmedo"], version = "^2.1.6" }
black = "^21.12b0"
pytest-cov = "^3.0.0"
freezegun = "^1.1.0"
types-freezegun = "^1.1.4"
pytest = "^6.2.5"
pytest-testmon = "^1.2.2"
pytest-watch = "^4.2.0"
celery-types = "^0.22.0"
types-flask = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnusedExpression = "error"
